--- a/portfolio.html
+++ b/portfolio.html
@@ -2,17 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Portfolio</title>
 
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/testimonials.css">
     <link rel="stylesheet" href="css/portfolioPage.css">
+    <link rel="stylesheet" href="css/fonts.css">
 
-    <script src="js/jquery-1.12.4.min.js"></script>
+    <link href="css/magnific-popup.css" rel="stylesheet" type="text/css">
+
+
+
+    <script src="js/jquery-1.12.4.js"></script>
     <script src="js/connectionMainPieces.js"></script>
 
     <!-- scripts connect here start -->
+    <script src="js/jquery-ui.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
 
     <!-- scripts connect here end -->
 
@@ -20,8 +27,109 @@
 <body>
 
 <header></header>
-
 <!-- html write here start -->
+
+<section>
+    <div class="top_block_town_background">
+        <h1 class="portfolio_text">portfolio</h1>
+    </div>
+</section>
+
+<section>
+    <div class="main_wrap">
+        <h2 class="portfolio_text title_page_text">TASTE IT THE GOOD PROJECTS</h2>
+    </div>
+</section>
+
+<section>
+    <div class="block_top_bottom_borders">
+        <div class="main_wrap">
+            <div class="border_left_right">
+
+                <ul class="list_menu">
+                    <li class="link_menu"><a href="#" class="a_link_style">all</a></li>
+                    <li class="link_menu"><a href="#" class="a_link_style">web design</a></li>
+                    <li class="link_menu"><a href="#" class="a_link_style">advertising</a></li>
+                    <li class="link_menu"><a href="#" class="a_link_style">identity</a></li>
+                    <li class="link_menu"><a href="#" class="a_link_style border-right_none_mod">illustration</a></li>
+                    <li class="link_menu"><a href="#" class="a_link_style without_border_mod">category<span class="arrow"></span></a>
+                        <ul>
+
+                            <li><div class="bor_bott"><input id="lorem" type="radio" title="@" class="input_radio_drop_menu">
+                                    <label for="lorem" class="label_style">Lorem</label>
+                                </div>
+                            </li>
+                            <li><div class="bor_bott"><input id="Ipsum" type="radio" title="@" class="input_radio_drop_menu">
+                                    <label for="Ipsum" class="label_style">Ipsum</label>
+                            </div>
+                            </li>
+                            <li><div class="bor_bott"><input id="Dolar" type="radio" title="@" class="input_radio_drop_menu">
+                                    <label for="Dolar" class="label_style">Dolar</label>
+                            </div>
+                            </li>
+                            <li><div class="bor_bott"><input id="Sit Amet" type="radio" title="@" class="input_radio_drop_menu">
+                                    <label for="Sit Amet" class="label_style">Sit Amet</label>
+                            </div>
+                            </li>
+                            <li><div class="bor_bott bor_bott_none_mod"><input id="Kullar" type="radio" title="@" class="input_radio_drop_menu">
+                                    <label for="Kullar" class="label_style">Kullar</label>
+                            </div>
+                            </li>
+
+                        </ul>
+                    </li>
+                </ul>
+
+
+                <a href="#" class="view_switch icon-view_inline"></a>
+                <a href="#" class="view_switch icon-view_grid"></a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+
+    <div id="gallery">
+        <div class="main_wrap main_wrap_gallery">
+            <div class="pics_container_for_gallery">
+                <a href="img/pic_category_with_camera.jpg" class="gallery_pic1 "></a>
+                <a href="img/pic_category_with_camera.jpg" class="gallery_pic1 gallery_pic2"></a>
+                <a href="img/pic_category_with_camera.jpg" class="gallery_pic1 gallery_pic3"></a>
+                <a href="img/pic_category_with_camera.jpg" class="gallery_pic1 gallery_pic4"></a>
+                <a href="img/pic_category_with_camera.jpg" class="gallery_pic1 gallery_pic5"></a>
+                <a href="img/pic_category_with_camera.jpg" class="gallery_pic1 gallery_pic6"></a>
+                <a href="img/pic_category_with_camera.jpg" class="gallery_pic1 gallery_pic7"></a>
+                <a href="img/pic_category_with_camera.jpg" class="gallery_pic1 gallery_pic8"></a>
+                <a href="img/pic_category_with_camera.jpg" class="gallery_pic1 gallery_pic9"></a>
+            </div>
+
+        </div>
+
+    </div>
+
+</section>
+
+<section>
+    <div class="block_top_bottom_borders">
+        <div class="main_wrap">
+            <h2 class="title_clients_text">clients</h2>
+
+            <div class="margin_contain">
+                <a href="#" class="client_first"></a>
+                <a href="#" class="clients_second"></a>
+                <a href="#" class="clients_third"></a>
+                <a href="#" class="clients_forth"></a>
+                <a href="#" class="clients_fifth"></a>
+                <a href="#" class="clients_sixth"></a>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+
+
 
 
 <!-- html write here end -->
@@ -31,5 +139,6 @@
 <footer></footer>
 
 <script src="js/scriptPortfolioPage.js"></script>
+
 </body>
 </html>
