- added classes to tegs in "drop menu" - fixed position block "category" - positioning according to "Pixel perfect"

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
     </div>
 </section>
 
-<section>
+<section class="clearfix">
     <div class="block_top_bottom_borders">
         <div class="main_wrap">
             <div class="border_left_right">
@@ -52,26 +52,26 @@
                     <li class="link_menu"><a href="#" class="a_link_style">advertising</a></li>
                     <li class="link_menu"><a href="#" class="a_link_style">identity</a></li>
                     <li class="link_menu"><a href="#" class="a_link_style border-right_none_mod">illustration</a></li>
-                    <li class="link_menu"><a href="#" class="a_link_style without_border_mod">category<span class="arrow"></span></a>
-                        <ul>
+                    <li class="link_menu link_menu_padding_none_mod"><a href="#" class="a_link_style without_border_mod">category<span class="arrow"></span></a>
+                        <ul class="links_container_drop-menu">
 
-                            <li><div class="bor_bott"><input id="lorem" type="radio" title="@" class="input_radio_drop_menu">
+                            <li class="select_link"><div class="bor_bott"><input id="lorem" type="radio" title="@" class="input_radio_drop_menu">
                                     <label for="lorem" class="label_style">Lorem</label>
                                 </div>
                             </li>
-                            <li><div class="bor_bott"><input id="Ipsum" type="radio" title="@" class="input_radio_drop_menu">
+                            <li class="select_link"><div class="bor_bott"><input id="Ipsum" type="radio" title="@" class="input_radio_drop_menu">
                                     <label for="Ipsum" class="label_style">Ipsum</label>
                             </div>
                             </li>
-                            <li><div class="bor_bott"><input id="Dolar" type="radio" title="@" class="input_radio_drop_menu">
+                            <li class="select_link"><div class="bor_bott"><input id="Dolar" type="radio" title="@" class="input_radio_drop_menu">
                                     <label for="Dolar" class="label_style">Dolar</label>
                             </div>
                             </li>
-                            <li><div class="bor_bott"><input id="Sit Amet" type="radio" title="@" class="input_radio_drop_menu">
+                            <li class="select_link"><div class="bor_bott"><input id="Sit Amet" type="radio" title="@" class="input_radio_drop_menu">
                                     <label for="Sit Amet" class="label_style">Sit Amet</label>
                             </div>
                             </li>
-                            <li><div class="bor_bott bor_bott_none_mod"><input id="Kullar" type="radio" title="@" class="input_radio_drop_menu">
+                            <li class="select_link"><div class="bor_bott bor_bott_none_mod"><input id="Kullar" type="radio" title="@" class="input_radio_drop_menu">
                                     <label for="Kullar" class="label_style">Kullar</label>
                             </div>
                             </li>
@@ -80,9 +80,11 @@
                     </li>
                 </ul>
 
+                <div class="padding_for_switch_view">
+                    <a href="#" class="view_switch icon-view_inline"></a>
+                    <a href="#" class="view_switch icon-view_grid"></a>
+                </div>
 
-                <a href="#" class="view_switch icon-view_inline"></a>
-                <a href="#" class="view_switch icon-view_grid"></a>
             </div>
         </div>
     </div>
