- changed the code structure of the gallery. - finished work with "Pixel Perfect".

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,8 +41,10 @@
     </div>
 </section>
 
+
+
 <section class="clearfix">
-    <div class="block_top_bottom_borders">
+    <div class="block_bottom_border">
         <div class="main_wrap">
             <div class="border_left_right">
 
@@ -55,23 +57,23 @@
                     <li class="link_menu link_menu_padding_none_mod"><a href="#" class="a_link_style without_border_mod">category<span class="arrow"></span></a>
                         <ul class="links_container_drop-menu">
 
-                            <li class="select_link"><div class="bor_bott"><input id="lorem" type="radio" title="@" class="input_radio_drop_menu">
-                                    <label for="lorem" class="label_style">Lorem</label>
+                            <li class="select_link"><div class="bor_bott"><input id="lorem" type="radio" title="@" class="input_radio_drop_menu" name="active_only_one">
+                                    <label for="lorem" class="label_style"><span></span>Lorem</label>
                                 </div>
                             </li>
-                            <li class="select_link"><div class="bor_bott"><input id="Ipsum" type="radio" title="@" class="input_radio_drop_menu">
+                            <li class="select_link"><div class="bor_bott"><input id="Ipsum" type="radio" title="@" class="input_radio_drop_menu" name="active_only_one">
                                     <label for="Ipsum" class="label_style">Ipsum</label>
                             </div>
                             </li>
-                            <li class="select_link"><div class="bor_bott"><input id="Dolar" type="radio" title="@" class="input_radio_drop_menu">
+                            <li class="select_link"><div class="bor_bott"><input id="Dolar" type="radio" title="@" class="input_radio_drop_menu" name="active_only_one">
                                     <label for="Dolar" class="label_style">Dolar</label>
                             </div>
                             </li>
-                            <li class="select_link"><div class="bor_bott"><input id="Sit Amet" type="radio" title="@" class="input_radio_drop_menu">
+                            <li class="select_link"><div class="bor_bott"><input id="Sit Amet" type="radio" title="@" class="input_radio_drop_menu" name="active_only_one">
                                     <label for="Sit Amet" class="label_style">Sit Amet</label>
                             </div>
                             </li>
-                            <li class="select_link"><div class="bor_bott bor_bott_none_mod"><input id="Kullar" type="radio" title="@" class="input_radio_drop_menu">
+                            <li class="select_link"><div class="bor_bott bor_bott_none_mod"><input id="Kullar" type="radio" title="@" class="input_radio_drop_menu" name="active_only_one">
                                     <label for="Kullar" class="label_style">Kullar</label>
                             </div>
                             </li>
@@ -80,7 +82,7 @@
                     </li>
                 </ul>
 
-                <div class="padding_for_switch_view">
+                <div class="view_switch_buttons">
                     <a href="#" class="view_switch icon-view_inline"></a>
                     <a href="#" class="view_switch icon-view_grid"></a>
                 </div>
@@ -91,29 +93,90 @@
 </section>
 
 <section>
-
     <div id="gallery">
         <div class="main_wrap main_wrap_gallery">
-            <div class="pics_container_for_gallery">
-                <a href="img/pic_category_with_camera.jpg" class="gallery_pic1 "></a>
-                <a href="img/pic_category_with_camera.jpg" class="gallery_pic1 gallery_pic2"></a>
-                <a href="img/pic_category_with_camera.jpg" class="gallery_pic1 gallery_pic3"></a>
-                <a href="img/pic_category_with_camera.jpg" class="gallery_pic1 gallery_pic4"></a>
-                <a href="img/pic_category_with_camera.jpg" class="gallery_pic1 gallery_pic5"></a>
-                <a href="img/pic_category_with_camera.jpg" class="gallery_pic1 gallery_pic6"></a>
-                <a href="img/pic_category_with_camera.jpg" class="gallery_pic1 gallery_pic7"></a>
-                <a href="img/pic_category_with_camera.jpg" class="gallery_pic1 gallery_pic8"></a>
-                <a href="img/pic_category_with_camera.jpg" class="gallery_pic1 gallery_pic9"></a>
+
+            <div class="block_holder">
+                <div class="block_hover_show">
+                    <h3 class="title_text_photo_h3">Ipsum Amet Dolar Sit</h3>
+                    <p class="text_info_p">Lorem ipsum dolor sit amet, consectetur adip iscingelitmauris nec ipsum at lacus commodo.</p>
+                    <a href="img/pic_category_with_camera.jpg" class="eye">Details</a>
+                </div>
+            </div>
+            <div class="block_holder">
+                <div class="block_hover_show">
+                    <h3 class="title_text_photo_h3">Ipsum Amet Dolar Sit</h3>
+                    <p class="text_info_p">Lorem ipsum dolor sit amet, consectetur adip iscingelitmauris nec ipsum at lacus commodo.</p>
+                    <a href="img/pic_category_with_camera.jpg" class="eye">Details</a>
+                </div>
+            </div>
+            <div class="block_holder">
+                <div class="block_hover_show">
+                    <h3 class="title_text_photo_h3">Ipsum Amet Dolar Sit</h3>
+                    <p class="text_info_p">Lorem ipsum dolor sit amet, consectetur adip iscingelitmauris nec ipsum at lacus commodo.</p>
+                    <a href="img/pic_category_with_camera.jpg" class="eye">Details</a>
+                </div>
+            </div>
+            <div class="block_holder">
+                <div class="block_hover_show">
+                    <h3 class="title_text_photo_h3">Ipsum Amet Dolar Sit</h3>
+                    <p class="text_info_p">Lorem ipsum dolor sit amet, consectetur adip iscingelitmauris nec ipsum at lacus commodo.</p>
+                    <a href="img/pic_category_with_camera.jpg" class="eye">Details</a>
+                </div>
+            </div>
+            <div class="block_holder">
+                <div class="block_hover_show">
+                    <h3 class="title_text_photo_h3">Ipsum Amet Dolar Sit</h3>
+                    <p class="text_info_p">Lorem ipsum dolor sit amet, consectetur adip iscingelitmauris nec ipsum at lacus commodo.</p>
+                    <a href="img/pic_category_with_camera.jpg" class="eye">Details</a>
+                </div>
+            </div>
+            <div class="block_holder">
+                <div class="block_hover_show">
+                    <h3 class="title_text_photo_h3">Ipsum Amet Dolar Sit</h3>
+                    <p class="text_info_p">Lorem ipsum dolor sit amet, consectetur adip iscingelitmauris nec ipsum at lacus commodo.</p>
+                    <a href="img/pic_category_with_camera.jpg" class="eye">Details</a>
+                </div>
+            </div>
+            <div class="block_holder">
+                <div class="block_hover_show">
+                    <h3 class="title_text_photo_h3">Ipsum Amet Dolar Sit</h3>
+                    <p class="text_info_p">Lorem ipsum dolor sit amet, consectetur adip iscingelitmauris nec ipsum at lacus commodo.</p>
+                    <a href="img/pic_category_with_camera.jpg" class="eye">Details</a>
+                </div>
+            </div>
+            <div class="block_holder">
+                <div class="block_hover_show">
+                    <h3 class="title_text_photo_h3">Ipsum Amet Dolar Sit</h3>
+                    <p class="text_info_p">Lorem ipsum dolor sit amet, consectetur adip iscingelitmauris nec ipsum at lacus commodo.</p>
+                    <a href="img/pic_category_with_camera.jpg" class="eye">Details</a>
+                </div>
+            </div>
+            <div class="block_holder">
+                <div class="block_hover_show">
+                    <h3 class="title_text_photo_h3">Ipsum Amet Dolar Sit</h3>
+                    <p class="text_info_p">Lorem ipsum dolor sit amet, consectetur adip iscingelitmauris nec ipsum at lacus commodo.</p>
+                    <a href="img/pic_category_with_camera.jpg" class="eye">Details</a>
+                </div>
             </div>
 
-        </div>
+            <div class="prev_next_button"></div>
 
+        </div>
     </div>
+
+
+
+
+
+
 
 </section>
 
+
+
 <section>
-    <div class="block_top_bottom_borders">
+    <div class="block_bottom_border">
         <div class="main_wrap">
             <h2 class="title_clients_text">clients</h2>
 
